force-app/main/default/objects/Annual_Funnel_Addition_Target_Config__c/Annual_Funnel_Addition_Target_Config__c.object-meta.xml
<CustomObject>
    <label>Annual Funnel Addition Target Config</label>
    <nameField>
        <displayFormat>FATC-{00000}</displayFormat>
        <label>Annual Funnel Addition Target Config Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Funnel Addition Target Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>