force-app/main/default/objects/Annual_Funnel_Addition_Target_Config__c/fields/Annual_Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Annual_Config_Name__c</fullName>
    <formula>HYPERLINK(
     &quot;/&quot; &amp; Id,
     Label__c  , 
     &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Config Name</label>
    <type>Text</type>
</CustomField>