force-app/main/default/objects/Annual_Funnel_Addition_Target_Config__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>