force-app/main/default/objects/Annual_Funnel_Addition_Target_Config__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>