force-app/main/default/objects/Annual_Funnel_Addition_Target_Config__c/fields/UseCustomPeriod__c.field-meta.xml
<CustomField>
    <fullName>UseCustomPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Period Override</label>
    <type>Checkbox</type>
</CustomField>