force-app/main/default/objects/Annual_Funnel_Addition_Target_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Annual_Config_Name__c</columns>
    <columns>Target__c</columns>
    <columns>Territory__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>UseCustomPeriod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>